--- a/src/styles/views/faqs.scss
+++ b/src/styles/views/faqs.scss
@@ -37,7 +37,7 @@
 
     @include media("<phone") {
         padding: 0 1rem;
-        height: 10rem;
+        height: 20rem;
     }
 }
 
