--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -11,8 +11,6 @@
 .home__wrapper {
     width: 100%;
     height: 100%;
-    @include media("<phone") {
-    }
 }
 
 .home__backgroud__media {
@@ -45,6 +43,9 @@
     font-family: "Helvetica Neue Regular";
     line-height: 0.9;
     position: relative;
+    @include media("<phone") {
+        font-family: "Helvetica Neue Medium";
+    }
 }
 
 h1[data-animation="header"] > span {
